# ui-ground-sdk

./: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
example/: package.json  pnpm-lock.yaml  vite.config.ts
example/src/: App.tsx  index.css
src/: collector.ts  db.ts  embedding-service.ts  handles.ts  icon-matcher.ts  index.ts  orchestrator.ts  types.ts
src/__tests__/: collector.test.ts  db.test.ts  integration.test.ts  parity.test.ts  semantic.test.ts  worker-client.test.ts  worker-protocol.test.ts
src/__tests__/fixtures/: mock-dom.ts
src/worker/: dedicated-worker.ts  index.ts  shared-worker.ts  worker-client.ts  worker-protocol.ts
wasm-db/: Cargo.toml
wasm-db/src/: cache.rs  db.rs  lib.rs  query.rs  similarity.rs  tokenizer.rs  types.rs
website/: package.json  pnpm-lock.yaml
website/app/: globals.css  page.tsx
website/components/dx/: AgentWorkflow.tsx  ApiFeature.tsx  CodeWindow.tsx  FeatureShowcase.tsx  FloatingQueryBar.tsx  InstallationBar.tsx  TerminalHero.tsx  VisionComparison.tsx
website/components/landing/: IconMorph.tsx  PerformanceChart.tsx  SemanticMap.tsx
website/components/new-landing/: FeatureCard.tsx  Hero.tsx  PrivacySection.tsx  StatItem.tsx
website/hooks/: useUiGround.ts
website/public/: ui_ground_wasm_bg.wasm
website/public/workers/: dedicated-worker.js  dedicated-worker.js.map  shared-worker.js  shared-worker.js.map
website/scripts/: build-workers.mjs
