[package]
name = "ui-ground-wasm"
version = "0.1.0"
edition = "2021"
description = "High-performance WASM query engine for UI-Ground SDK"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# String matching & fuzzy search
strsim = "0.11"
aho-corasick = "1.1"
unicode-segmentation = "1.10"

# Error handling & debugging
console_error_panic_hook = { version = "0.1", optional = true }

# Hash maps
rustc-hash = "1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
